// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker Snapshot tests focus 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="left"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="css-d70g0l"
        >
            <div
                className="hig-tooltip-title"
            >
                test
            </div>
        </div>
    }
    placement="right"
    prefixCls="hig-tooltip"
    title="test"
    trigger="focus"
    width={300}
>
    <div
        className="hig-tooltip-children-wrapper"
    >
        <button>
            tooltip
        </button>
    </div>
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="left"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="css-d70g0l"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="focus"
      width={300}
>
      <div
            className="hig-tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="left"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      prefixCls="hig-tooltip"
      title="test"
      trigger="focus"
      width={300}
>
      <button>
            tooltip
      </button>
</Tooltip>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "left",
        "arrowContent": null,
        "children": <button>
          tooltip
</button>,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "prefixCls": "hig-tooltip",
        "title": "test",
        "trigger": "focus",
        "width": 300,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="left"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="css-d70g0l"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="focus"
      width={300}
>
      <div
            className="hig-tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="left"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    prefixCls="hig-tooltip"
    title="test"
    trigger="focus"
    width={300}
>
    <button>
        tooltip
    </button>
</Tooltip>,
}
`;

exports[`DatePicker Snapshot tests hover 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="left"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={0}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="css-d70g0l"
        >
            <div
                className="hig-tooltip-title"
            >
                test
            </div>
        </div>
    }
    placement="right"
    prefixCls="hig-tooltip"
    title="test"
    trigger="hover"
    width={300}
>
    <div
        className="hig-tooltip-children-wrapper"
    >
        <button>
            tooltip
        </button>
    </div>
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="left"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={0}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="css-d70g0l"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="hover"
      width={300}
>
      <div
            className="hig-tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="left"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={0}
      mouseLeaveDelay={0.2}
      prefixCls="hig-tooltip"
      title="test"
      trigger="hover"
      width={300}
>
      <button>
            tooltip
      </button>
</Tooltip>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "left",
        "arrowContent": null,
        "children": <button>
          tooltip
</button>,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 0,
        "mouseLeaveDelay": 0.2,
        "prefixCls": "hig-tooltip",
        "title": "test",
        "trigger": "hover",
        "width": 300,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="left"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={0}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="css-d70g0l"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="hover"
      width={300}
>
      <div
            className="hig-tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="left"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={0}
    mouseLeaveDelay={0.2}
    prefixCls="hig-tooltip"
    title="test"
    trigger="hover"
    width={300}
>
    <button>
        tooltip
    </button>
</Tooltip>,
}
`;

exports[`DatePicker Snapshot tests left replacement 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="left"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="css-d70g0l"
        >
            <div
                className="hig-tooltip-title"
            >
                test
            </div>
        </div>
    }
    placement="right"
    prefixCls="hig-tooltip"
    title="test"
    trigger="click"
    width={300}
>
    <div
        className="hig-tooltip-children-wrapper"
    >
        <button>
            tooltip
        </button>
    </div>
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="left"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="css-d70g0l"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
      width={300}
>
      <div
            className="hig-tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="left"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
      width={300}
>
      <button>
            tooltip
      </button>
</Tooltip>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "left",
        "arrowContent": null,
        "children": <button>
          tooltip
</button>,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "prefixCls": "hig-tooltip",
        "title": "test",
        "trigger": "click",
        "width": 300,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="left"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="css-d70g0l"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
      width={300}
>
      <div
            className="hig-tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="left"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    prefixCls="hig-tooltip"
    title="test"
    trigger="click"
    width={300}
>
    <button>
        tooltip
    </button>
</Tooltip>,
}
`;

exports[`DatePicker Snapshot tests right replacement 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="css-d70g0l"
        >
            <div
                className="hig-tooltip-title"
            >
                test
            </div>
        </div>
    }
    placement="right"
    prefixCls="hig-tooltip"
    title="test"
    trigger="click"
    width={300}
>
    <div
        className="hig-tooltip-children-wrapper"
    >
        <button>
            tooltip
        </button>
    </div>
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="css-d70g0l"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
      width={300}
>
      <div
            className="hig-tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
      width={300}
>
      <button>
            tooltip
      </button>
</Tooltip>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "right",
        "arrowContent": null,
        "children": <button>
          tooltip
</button>,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "prefixCls": "hig-tooltip",
        "title": "test",
        "trigger": "click",
        "width": 300,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="css-d70g0l"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
      width={300}
>
      <div
            className="hig-tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    prefixCls="hig-tooltip"
    title="test"
    trigger="click"
    width={300}
>
    <button>
        tooltip
    </button>
</Tooltip>,
}
`;
